--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
 }
