--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "button.anim.com.android_anim_button"
+        applicationId "com.anim.button"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -15,6 +15,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+        }
+
+        debug {
+            debuggable true
         }
     }
 }
@@ -25,4 +30,7 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
+
+    //build reset lib
+    compile 'com.github.mmin18.layoutcast:library:1.+@aar'//speed build
 }
