--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
-
     //build reset lib
-    compile 'com.github.mmin18.layoutcast:library:1.+@aar'//speed build
+    compile 'com.github.mmin18.layoutcast:library:1.+@aar'
 }
